--- a/src/App.css
+++ b/src/App.css
@@ -13,3 +13,27 @@ main {
     background-color: #c67171;
     color: white;
 }
+
+#red {
+    position: relative;
+    width: 100%;
+    height: 350px;
+    background-color: #ba1211;
+    margin-top: 15px;
+    display: flex;
+    justify-content: center;
+}
+
+#cian {
+    position: relative;
+    width: 100%;
+    height: 350px;
+    background-color: #ffff00;;
+    margin-top: 15px;
+    display: flex;
+    justify-content: center;
+}
+
+.ocultar {
+    display: none;
+}
