--- a/src/components/css/SectionProps.module.css
+++ b/src/components/css/SectionProps.module.css
@@ -1,4 +1,4 @@
-section {
+/* section {
     position: relative;
     width: 100%;
     height: 350px;
@@ -6,4 +6,4 @@ section {
     margin-top: 15px;
     display: flex;
     justify-content: center;
-}
+} */
