--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,16 @@ main {
     position: relative;
     width: 100%;
     height: 350px;
+    background-color: #def7f6;
+    margin-top: 15px;
+    display: flex;
+    justify-content: center;
+}
+
+#yellow {
+    position: relative;
+    width: 100%;
+    height: 350px;
     background-color: #ffff00;;
     margin-top: 15px;
     display: flex;
