--- a/src/App.css
+++ b/src/App.css
@@ -34,14 +34,18 @@ main {
     justify-content: center;
 }
 
-#yellow {
+#brown {
     position: relative;
     width: 100%;
     height: 350px;
-    background-color: #ffff00;;
+    background-color: #ba5511;
     margin-top: 15px;
     display: flex;
     justify-content: center;
+}
+
+#brown div {
+    border-radius: 5px;
 }
 
 
